force-app/main/default/objects/Service_Agent__c/fields/Accepts_Work__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Work__c</fullName>
    <description>Maintained from the presence status. Only agents with this checked receive routed work.</description>
    <label>Accepts Work</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>