force-app/main/default/objects/Service_Agent__c/fields/Active_Work_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Work_Count__c</fullName>
    <label>Active Work Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>