force-app/main/default/objects/Service_Agent__c/fields/Current_Load__c.field-meta.xml
<CustomField>
    <fullName>Current_Load__c</fullName>
    <description>Sum of Capacity Weight across open work items. Maintained by the routing engine.</description>
    <label>Current Load</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>