force-app/main/default/objects/Service_Agent__c/fields/Last_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_At__c</fullName>
    <description>Drives Round Robin ordering.</description>
    <label>Last Assigned At</label>
    <type>DateTime</type>
</CustomField>