force-app/main/default/objects/Service_Agent__c/fields/Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity__c</fullName>
    <description>Total capacity units the agent can hold at once.</description>
    <label>Max Capacity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <defaultValue>5</defaultValue>
</CustomField>