force-app/main/default/objects/Service_Agent__c/fields/Presence_Since__c.field-meta.xml
<CustomField>
    <fullName>Presence_Since__c</fullName>
    <label>Presence Since</label>
    <type>DateTime</type>
</CustomField>