force-app/main/default/objects/Service_Agent__c/fields/Presence_Status__c.field-meta.xml
<CustomField>
    <fullName>Presence_Status__c</fullName>
    <description>DeveloperName of the Service_Presence_Status__mdt record the agent is currently in.</description>
    <label>Presence Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>