force-app/main/default/objects/Service_Agent__c/fields/Presence_Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Presence_Status_Label__c</fullName>
    <label>Presence Status Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>