force-app/main/default/objects/Service_Agent__c/fields/Remaining_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Capacity__c</fullName>
    <formula>Max_Capacity__c - Current_Load__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>7</precision>
    <scale>2</scale>
    <label>Remaining Capacity</label>
    <type>Number</type>
</CustomField>