force-app/main/default/objects/Service_Agent__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Semicolon separated skill keys, e.g. CREDIT;COLLECTIONS;SPANISH.</description>
    <label>Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>