force-app/main/default/objects/Service_Agent__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <label>Supervisor</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Supervised Service Agents</relationshipLabel>
    <relationshipName>Supervised_Service_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>