force-app/main/default/objects/Service_Agent__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <deleteConstraint>Cascade</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Service Agent Profile</relationshipLabel>
    <relationshipName>Service_Agent_Profiles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>