force-app/main/default/objects/Service_Agent__c/fields/User_Id_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Id_Key__c</fullName>
    <description>Copy of User Id. Enforces one agent record per user and gives Flows a fast upsert key.</description>
    <label>User Id Key</label>
    <length>18</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <type>Text</type>
</CustomField>