force-app/main/default/objects/Service_Agent__c/fields/Utilization_Percent__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Percent__c</fullName>
    <formula>IF(Max_Capacity__c = 0, 0, (Current_Load__c / Max_Capacity__c) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>5</precision>
    <scale>2</scale>
    <label>Utilization Percent</label>
    <type>Percent</type>
</CustomField>